# utils-swg

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MEMORY_LEAK_FIXES.md  MEMORY_LEAK_FIX_SUMMARY.md  PARAMETER_CONFIGURABILITY_DEMO.md  README.md  check_git_tracking.sh  demo_config.json  install_dependencies.sh  multi_gpu_demo.py  pyproject.toml  requirements.txt  setup.py  small_test_config.json  test_custom_config.json  test_custom_config_fixed.json  test_real_datasets.py  test_training_pipeline.py  tiny_test_config.json  train.py  verify_setup.py  working_config.json
docs/: DEVELOPMENT.md
examples/: config_examples.py  custom_llm_config.json
scripts/: cli.py
src/: __init__.py
src/core/: __init__.py  main.py
src/datasets/: __init__.py  advanced_programming_datasets.py  robotics_datasets.py  vision_datasets.py
src/training/: __init__.py  train_llm.py  train_llm_optimized.py
src/utils/: __init__.py  gpu_utils.py  memory_manager.py
tests/: README.md  __init__.py  comprehensive_generation_test.py  demo_generation.py  evaluate_model.py  optimization_comparison.py  quick_optimization_demo.py  run_tests.py  test_dataset_integration.py  test_generation.py  test_optimized_training.py  test_setup.py
